overflow on phone fix

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,11 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 #root {
